Require JDK 21+ runtime